@@ -6,6 +6,7 @@ PostGIS 2.0.2
   - #1891, Use LDFLAGS environment when building liblwgeom
   - #1900, Fix pgsql2shp for big-endian systems 
   - #1932, Fix raster2pgsql for invalid syntax for setting index tablespace
+  - #1955, ST_ModEdgeHeal and ST_NewEdgeHeal for doubly connected edges
 
 PostGIS 2.0.1
 2012/06/22
